bugfix/ETSL-771 alignement changes for card and heading

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/help-and-support-action-bar.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/help-and-support-action-bar.scss
@@ -77,6 +77,7 @@
           padding-top: 1em;
           position: relative;
           text-transform: uppercase;
+          text-align: center;
         }
 
         h5::after {
@@ -333,7 +334,7 @@
     letter-spacing: 0;
     margin-bottom: 2rem;
     margin-top: 2rem;
-    text-align: center;
+    text-align: center !important;
   }
 }
 
@@ -466,4 +467,7 @@
       border-bottom: $border-step-1 solid $light-sand-brown;
     }
   }
+}
+.iconcardlist{
+  float: unset;
 }
